Size bug on iPhone fix

--- a/main.css
+++ b/main.css
@@ -166,9 +166,9 @@ img {
 }
 
 #rock.notselect{
-    height: 10vw;
-    width: 10vw;
-    bottom: -6vw;
+    height: 6vh;
+    width: 6vh;
+    bottom: -1.5vh;
 }
 
 #scissors.select{
@@ -180,9 +180,9 @@ img {
 }
 
 #scissors.notselect{
-    height: 10vw;
-    width: 10vw;
-    bottom: -6vw;
+    height: 6vh;
+    width: 6vh;
+    bottom: -1.5vh;
 }
 
 #paper.select{
@@ -194,9 +194,9 @@ img {
 }
 
 #paper.notselect{
-    height: 10vw;
-    width: 10vw;
-    bottom: -6vw;
+    height: 6vh;
+    width: 6vh;
+    bottom: -1.5vh;
 }
 
 #user-hands img{
@@ -275,7 +275,7 @@ img {
     justify-content: center;
     text-align: center;
     border-radius: 7.5vh;
-    top: 7vh;
+    top: 4vh;
     height: 15vh;
     width: 15vh;
 	opacity: 0;
